Fix checkbox alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -145,6 +145,7 @@ footer {
 
 .input_checkbox input {
   width: auto !important;
+  top: 5px;
 }
 
 .center-block {
